[package]
name = "ml-resultscoresRust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linfa = {version = "0.6.1", features = ["openblas-system"]}
linfa-logistic = "0.6.1"
ndarray = {version = "0.15.6", default-features = false}
ndarray-csv = "0.5.1"
csv = "1.1"
plotlib = "0.5.1"